# Test_app

./: .gitignore  MainWindow.xaml  MainWindow.xaml.cs  README.md  SteamManager.cs  create_shortcut.ps1  create_shortcut.vbs  create_shortcut_safe.vbs  handoff_to_claude_code.md  index.html  make_lnk.bat  package-lock.json  package.json  start.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  build_errors.txt  build_errors_utf8.txt  build_log.txt  build_report.txt  check_errors.txt  debug_build.txt  diagnostics.txt  error.txt  final_check.txt  final_debug.txt  last_hope.txt  log.txt  ps_approach_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_manager.rs  exe_icon.rs  icon_manager.rs  main.rs  manual_game_manager.rs  steam_manager.rs
src/components/: GameBanner.tsx
src/components/__tests__/: GameBanner.test.tsx
src/hooks/: useAudio.ts  useManualGames.ts  useSteam.ts
src/hooks/__tests__/: useAudio.test.ts  useManualGames.test.ts  useSteam.test.ts
src/test/: setup.ts
